.kubernetes/grafana-httproute-80.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: apps
spec:
  parentRefs:
    - name: public-gateway
      sectionName: http
  hostnames:
    - grafana.nanocore.vivetonline.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
